# CharaLLMTalks

./: .gitignore  README.md  app.py  download_test_model.bat  install_main.bat  install_main.sh  install_qlora_cu118.bat  install_style_bert_vits_cu118.bat  launch.bat  launch_api.bat  pyproject.toml
backend/: app.py  main.py  requirements.txt
frontend/: index.html  script.js  style.css
